--- a/styles/c4_main.css
+++ b/styles/c4_main.css
@@ -14,8 +14,8 @@ header h2 {
 	text-indent: 30px;
 }
 header h3{
-	font-size: 130%;
-	font-style: italic;
+	font-size: 170%;
+	color: #800000;
 	text-indent: 30px;
 }
 
