--- a/styles/c4_main.css
+++ b/styles/c4_main.css
@@ -13,7 +13,7 @@ header h2 {
 	color: #800000;
 	text-indent: 30px;
 }
-header h3{
+header h3 {
 	font-size: 170%;
 	font-style: italic;
 	text-indent: 30px;
@@ -33,5 +33,7 @@ main h2 {
 main h3 {
 	font-size: 105%;
 }
+main a {
 
+}
 /* the styles for the footer */
