--- a/styles/c4_main.css
+++ b/styles/c4_main.css
@@ -33,7 +33,10 @@ main h2 {
 main h3 {
 	font-size: 105%;
 }
-main a {
-
+main a:hover {
+	font-style: italic;
 }
 /* the styles for the footer */
+footer p{
+	text-align: center;
+}
