--- a/styles/c4_main.css
+++ b/styles/c4_main.css
@@ -19,7 +19,7 @@ header h3 {
 	text-indent: 30px;
 }
 header .shadow{
-	text-shadow: #800000;
+	text-shadow: 2px 2px #800000;
 }
 
 /* the styles for the main content */
